# draft-optimizer

./: .gitignore  README.md  pyproject.toml
draft_optimizer/: __init__.py  cli.py  data.py  models.py  optimizer.py
draft_optimizer/web/: __init__.py  blueprint.py  service.py
draft_optimizer/web/static/baseball_draft/: app.js  styles.css
draft_optimizer/web/templates/baseball_draft/: index.html
