[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draft-optimizer"
version = "0.1.0"
description = "Live draft optimizer for fantasy baseball"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
data = [
  "numpy>=1.26",
  "pandas>=2.0",
  "flask>=3.1.0",
]
torch = [
  "torch>=2.2",
]
all = [
  "numpy>=1.26",
  "pandas>=2.0",
  "torch>=2.2",
  "flask>=3.1.0",
]

[project.scripts]
draft-optimize = "draft_optimizer.cli:main"

[tool.setuptools.packages.find]
include = ["draft_optimizer*"]

[tool.setuptools.package-data]
draft_optimizer = [
  "web/templates/*/*.html",
  "web/static/*/*.css",
  "web/static/*/*.js",
]
